<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/informe_o_material_que_deseja"
        android:paddingBottom="25dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/opcoes">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opcao1"
            android:text="@string/piso_branco_baixo_brilho"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opcao2"
            android:text="@string/piso_albania_45x45"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opcao3"
            android:text="@string/porcelanato_perlato_branco"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/opcao4"
            android:text="@string/revestimento_mosaico"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/informe_a_medida_em_m"
        android:paddingTop="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/respMetros"
        android:inputType="numberDecimal"
        android:text="@string/valorInicial"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check"
        android:checked="true"
        android:text="@string/ultra_frete_mega_r_pido"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calcular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="12dp"
        android:id="@+id/resultadoFinal"
        android:text="@string/valorFinal"
        android:paddingTop="25dp"/>

</LinearLayout>